--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@ant-design/charts": "^2.2.6",
     "@hookform/resolvers": "^3.10.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "@tailwindcss/vite": "^4.1.3",
     "antd": "^5.23.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
@@ -22,6 +23,7 @@
     "react-router-dom": "^7.1.3",
     "redux-persist": "^6.0.0",
     "sonner": "^1.7.2",
+    "tailwindcss": "^4.1.3",
     "vercel": "^41.2.1",
     "zod": "^3.24.1"
   },
